RESOLVED FIXED27301
[WINCE] vprintf_stderr_common must use OutputDebugStringW
https://bugs.webkit.org/show_bug.cgi?id=27301
Summary [WINCE] vprintf_stderr_common must use OutputDebugStringW
Joe Mason
Reported 2009-07-15 09:02:15 PDT
Need to patch vprintf_stderr_common to use OutputDebugStringW on WinCE since OutputDebugStringA isn't supported
Attachments
patch to Assertions.cpp (2.83 KB, patch)
2009-07-15 09:11 PDT, Joe Mason
staikos: review+
Joe Mason
Comment 1 2009-07-15 09:11:44 PDT
Created attachment 32789 [details] patch to Assertions.cpp
Adam Treat
Comment 2 2009-07-15 10:20:46 PDT
Landed with r45921.
Note You need to log in before you can comment on or make changes to this bug.