2009-07-15  Yong Li  <yong.li@torchmobile.com>

Reviewed by George Staikos.

         https://bugs.webkit.org/show_bug.cgi?id=27301
         Use OutputDebugStringW on WinCE since OutputDebugStringA is not supported
         Originally written by Yong Li <yong.li@torchmobile.com> and refactored by
         Joe Mason <joe.mason@torchmobile.com>

         * wtf/Assertions.cpp: vprintf_stderr_common

Canonical link: https://commits.webkit.org/37551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45921 268f45cc-cd09-0410-ab3c-d52691b4dbfc